# rssr

./: Cargo.toml  foo.comp
shaders/src/: dynamic.comp  skeleton.comp
src/: ast.rs  lib.rs  parse.lalrpop  tree.rs  utility.rs
src/ops/: cpu.rs  gpu.rs
src/tree/: eval.rs
src/tree/eval/: gpu.rs  singlethreaded.rs
src/tree/eval/gpu/: dynamic.rs  statik.rs
src/tree/eval/gpu/statik/: shader.rs
src/tree/eval/gpu/statik/shader/: glsl.rs
