[package]
name = "rssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
bench = true

[dependencies]
anyhow = "1.0.86"
approx = "0.5.1"
clap = "4.5.4"
enum_delegate = "0.2.0"
enum_dispatch = "0.3.12"
glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
itertools = "0.13.0"
rayon = "1.10.0"
shaderc = "0.8.3"