[package]
name = "rssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
bench = true

[profile.test]
opt-level = 0

[dependencies]
anyhow = "1.0.86"
approx = "0.5.1"
bytemuck = "1.16.0"
clap = "4.5.4"
crevice = "0.16.0"
enum_delegate = "0.2.0"
enum_dispatch = "0.3.12"
glsl = "7.0.0"
glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
glsl-lang-pp = "0.5.2"
itertools = "0.13.0"
naga = { version = "0.20.0", features = ["glsl-in"] }
nalgebra = "0.33.0"
petgraph = "0.6.5"
pollster = "0.3.0"
rayon = "1.10.0"
shaderc = "0.8.3"
thiserror = "1.0.61"
wgpu = { version = "0.20.0", features = ["naga-ir", "spirv"] }
